tests/toy/neg/000925_mutation.toylang
program a = { if a bool then sleep; } .
